@@ -1142,10 +1142,12 @@ str FCTgetOwners(bat *ret);
 str FCTgetPlants(bat *ret, bat *ret2);
 str FCTshutdown(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str GROUPmulticolumngroup(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
-str GRPsubgroup1(bat *ngid, bat *next, bat *nhis, const bat *bid);
+str GRPgroup1(bat *ngid, bat *next, bat *nhis, const bat *bid);
+str GRPgroup2(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid);
 str GRPsubgroup2(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *gid);
-str GRPsubgroup3(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *gid, const bat *eid, const bat *hid);
-str GRPsubgroup4(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid, const bat *gid, const bat *eid, const bat *hid);
+str GRPsubgroup3(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid, const bat *gid);
+str GRPsubgroup4(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *gid, const bat *eid, const bat *hid);
+str GRPsubgroup5(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid, const bat *gid, const bat *eid, const bat *hid);
 str IDentifier(identifier *retval, str *in);
 int IDfromString(str src, int *len, identifier *retval);
 str IDprelude(void *ret);
@@ -2110,6 +2112,7 @@ int getprofilerlimit(void);
 str grabRef;
 str groupRef;
 str groupbyRef;
+str groupdoneRef;
 int hasCommonResults(InstrPtr p, InstrPtr q);
 int hasSameArguments(MalBlkPtr mb, InstrPtr p, InstrPtr q);
 int hasSameSignature(MalBlkPtr mb, InstrPtr p, InstrPtr q, int stop);
