@@ -44,7 +44,7 @@ function user.s8_1():void;
     X_39 := bat.new(nil:int);
     C_42 := algebra.subselect(X_39,nil:int,nil:int,true,true,true);
     X_45 := algebra.projection(C_42,X_39);
-    (X_46,X_47,X_48) := group.subgroupdone(X_45);
+    (X_46,X_47,X_48) := group.groupdone(X_45);
     X_49:lng := aggr.sum(X_48);
     X_53 := aggr.count(X_48);
     X_51:bit := calc.isnil(X_49);
@@ -86,7 +86,7 @@ function user.s10_1():void;
     X_39 := bat.new(nil:int);
     C_42 := algebra.subselect(X_39,nil:int,nil:int,true,true,true);
     X_45 := algebra.projection(C_42,X_39);
-    (X_46,X_47,X_48) := group.subgroupdone(X_45);
+    (X_46,X_47,X_48) := group.groupdone(X_45);
     X_49:lng := aggr.sum(X_48);
     X_53 := aggr.count(X_48);
     X_51:bit := calc.isnil(X_49);
@@ -140,7 +140,7 @@ function user.s18_1():void;
     X_39 := bat.new(nil:int);
     C_42 := algebra.subselect(X_39,nil:int,nil:int,true,true,true);
     X_45 := algebra.projection(C_42,X_39);
-    (X_46,X_47,X_48) := group.subgroupdone(X_45);
+    (X_46,X_47,X_48) := group.groupdone(X_45);
     X_49:lng := aggr.sum(X_48);
     X_53 := aggr.count(X_48);
     X_51:bit := calc.isnil(X_49);
